[gd_scene load_steps=8 format=3 uid="uid://cb6ltjdroeu3o"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_8ec2f"]
[ext_resource type="Texture2D" uid="uid://csm7dwxhe7e3o" path="res://assets/Main Menu/Background.jpg" id="2_xr16x"]
[ext_resource type="Texture2D" uid="uid://ce3g6myyr515m" path="res://assets/Main Menu/begin.png" id="3_f4sc4"]
[ext_resource type="Texture2D" uid="uid://dw05n0au7gfd2" path="res://assets/Main Menu/controls.png" id="4_hqt6p"]
[ext_resource type="Texture2D" uid="uid://by17fbrcwirch" path="res://assets/Main Menu/quit.png" id="5_iu437"]
[ext_resource type="Texture2D" uid="uid://d25hskd6ixyju" path="res://assets/Main Menu/shield.png" id="6_jheqw"]
[ext_resource type="Texture2D" uid="uid://dxtybir257hm0" path="res://assets/Main Menu/title.png" id="6_ym3s8"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_vertical = 4
script = ExtResource("1_8ec2f")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
offset_top = -106.0
offset_right = 480.0
offset_bottom = 374.0
texture = ExtResource("2_xr16x")
expand_mode = 4
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 157.0
offset_top = -12.0
offset_right = 306.0
offset_bottom = 186.0
texture = ExtResource("6_jheqw")

[node name="BeginGame" type="Button" parent="."]
layout_mode = 2
offset_left = 205.0
offset_top = 175.0
offset_right = 259.0
offset_bottom = 200.0
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("3_f4sc4")

[node name="Controls" type="Button" parent="."]
layout_mode = 1
offset_left = 190.0
offset_top = 205.0
offset_right = 275.0
offset_bottom = 227.0
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("4_hqt6p")
icon_alignment = 1

[node name="QuitGame" type="Button" parent="."]
layout_mode = 2
offset_left = 210.0
offset_top = 230.0
offset_right = 253.0
offset_bottom = 260.0
size_flags_horizontal = 4
size_flags_vertical = 0
icon = ExtResource("5_iu437")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
offset_left = 42.0
offset_top = 64.0
offset_right = 436.0
offset_bottom = 132.0
texture = ExtResource("6_ym3s8")

[connection signal="pressed" from="BeginGame" to="." method="_on_begin_game_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="QuitGame" to="." method="_on_quit_game_pressed"]
